# photo-album-manager

./: .gitignore  pyproject.toml
.specify/: feature.json  init-options.json  integration.json
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
specs/001-photo-album-manager/: plan.md  spec.md  tasks.md
specs/001-photo-album-manager/checklists/: requirements.md
src/: app.py
src/lib/: image.py
src/static/css/: style.css
src/static/js/: album-list.js  app.js  photo-grid.js
src/storage/: store.py
src/templates/: album.html  album_card.html  base.html  create_album.html  empty_state.html  error_boundary.html  index.html  photo_tile.html
src/types/: __init__.py
tests/: test_storage.py
