[project]
name = "photo-album-manager"
version = "0.1.0"
description = "A photo album manager with date-grouped browsing and drag-and-drop reordering"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "jinja2>=3.1",
    "pillow>=10.0",
    "python-multipart>=0.0.9",
]

[tool.setuptools.packages.find]
include = ["src*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
